k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bibliotec
  labels:
    name: bibliotec
    app: bibliotec
