k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bibliotheque-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bibliotheque
  template:
    metadata:
      labels:
        app: bibliotheque
    spec:
      containers:
        - name: bibliotheque
          image: bibliotheque:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          command: ["/bin/sh", "-c"]
          args:
            - |
              python manage.py migrate
              python manage.py collectstatic --noinput
              gunicorn bibliotheque.wsgi:application --bind 0.0.0.0:8000
