k8s/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bibliotec-web-service
  namespace: bibliotec
  labels:
    app: bibliotec-web
    tier: application
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: bibliotec-web
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
