k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bibliotheque-service
spec:
  selector:
    app: bibliotheque
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30001
  type: NodePort
