k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bibliotec-ingress
spec:
  rules:
    - host: bibliotec.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bibliotec-service
                port:
                  number: 8000
